Made Season Page

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,10 +3,10 @@
 2. PHP Framework
 3. Connect database to website
 4. Merge CSS Files for optimization
-5. Create User Page
+5. Create User Page 
 6. Validation using js
 7. Update Icon CDNs
-8. Create Season Page
+8. Create Season Page => DONE
 
 /-----------NON IMPORTANT-----------/
 1. Change Font Everywhere
@@ -14,6 +14,6 @@
 
 /-----------Trek Page------------/
 3-Modals for Book Ticket Button
-1. Select Persons
+1. Select Persons (Maybe Remove)
 2. Select Date
 3. Select Where to join and your mode of transport to that location.
